<resources>
    <string name="app_name">Project</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="au">Au</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="notification">Notification</string>
    <string name="login1">LOGIN</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="register1">REGISTER</string>
    <string name="retype_password">Retype Password</string>
    <string name="input_user_name">Input User Name</string>
    <string name="name">Name</string>
    <string name="home_page">Home Page</string>
    <string name="view_home">View Home</string>
    <string name="background">Background</string>
    <string name="view">View</string>
    <string name="create_new_lutemon">Create New Lutemon</string>
    <string name="home_screeen">Home Screeen</string>
    <string name="home_screen">Home Screen</string>
    <string name="beasts_battle">Beasts Battle</string>
    <string name="battle_arena">Battle Arena</string>
    <string name="tranining_area">Tranining Area</string>
    <string name="beasts_at_home">Beasts at Home</string>
    <string name="view_training_area">View Training Area</string>
    <string name="view_battle_area">View Battle Area</string>
    <string name="move_to_home_page">Move to Home Page</string>
    <string name="information_of_user">Information of User</string>
    <string name="view_info">View Info</string>
    <string name="statistics">Statistics</string>
    <string name="view_statistics">View Statistics</string>
    <string name="beast_battle">Beast Battle</string>
    <string name="view_beast_battle">View Beast Battle</string>
    <string name="information">Information</string>
    <string name="log_out">Log out</string>
    <string name="element">Element</string>
    <string name="health">Health</string>
    <string name="maxhealth">maxHealth</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="character">Character</string>
    <string name="select_beast">Select Beast:</string>
    <string name="beast_name">Beast Name</string>
    <string name="create_new_beast">Create New Beast</string>
    <string name="enter_the_beast_name">Enter The Beast Name.</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="helth1">Health:</string>
    <string name="maxh">MaxH:</string>
    <string name="atk">ATK:</string>
    <string name="dfs">DFS:</string>
    <string name="view_here_to_see_the_user_and_password">View here to see the user and password.</string>
    <string name="some_filed_for_the_beasts">Some filed for the Beasts.</string>
    <string name="training">Training</string>
    <string name="homepage">HomePage</string>
    <string name="battle">Battle</string>
    <string name="home">Home</string>
    <string name="experence">Experence:</string>
    <string name="training_area">Training Area</string>
    <string name="training_selected">Training Selected</string>
    <string name="move_to_home">Move to Home</string>
    <string name="move_to_training">Move to Training</string>
    <string name="move_to_training_area">Move to Training Area</string>
    <string name="name_of_type">Name of Type</string>
    <string name="decription">Decription</string>
    <string name="battles">Battles</string>
    <string name="view_charts">View Charts</string>
    <string name="battle_screen">Battle Screen</string>
    <string name="next_attack">Next Attack</string>
    <string name="end_battle">End Battle</string>
    <string name="convert_exp">Convert EXP</string>
    <string name="convert_maxhealth_4_exp_1_maxhealth">Convert MaxHealth: 4 EXP - 1 MaxHealth</string>
    <string name="convert_atk_2_exp_1_atk">Convert ATK: 2 EXP - 1 ATK</string>
    <string name="convert_def_3_exp_1_def">Convert DEF: 3 EXP - 1 DEF</string>
    <string name="lost">Lost</string>
    <string name="start_battle">Start Battle</string>
    <string name="view_chart">View Chart</string>
    <string name="move_to_statistics">Move to Statistics</string>
    <string name="loaded">Loaded</string>
    <string name="save_all_beasts">Save All Beasts</string>
    <string name="experience">Experience</string>
</resources>