<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#0033CC"
        android:gravity="center"
        android:text="@string/register1" />

    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="20sp"
        android:autofillHints="Input Email"
        android:ems="10"
        android:hint="@string/input_user_name"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="20sp"
        android:autofillHints="Input Password"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="20sp"
        android:autofillHints="Retype Password"
        android:ems="10"
        android:hint="@string/retype_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="105dp"
        android:layout_height="59dp"
        android:backgroundTint="#0033CC"
        android:layout_marginBottom="20sp"
        android:text="@string/register" />

</LinearLayout>