<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.BeastBattle">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="387dp"
        android:layout_height="56dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/beasts_battle"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/createnew"
        android:layout_width="219dp"
        android:layout_height="47dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="60dp"
        android:background="#006622"
        android:text="@string/create_new_lutemon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="142dp"
        android:layout_height="28dp"
        android:layout_marginEnd="252dp"
        android:text="@string/beast_battle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="699dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="385dp"
        android:layout_height="163dp"
        android:background="@drawable/textview_home"
        app:layout_goneMarginBottom="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="20dp"
        android:text="@string/battle_arena"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="383dp"
        android:layout_height="158dp"
        android:background="@drawable/textview_home"
        app:layout_goneMarginBottom="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="281dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tranining_area"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="385dp"
        android:layout_height="166dp"
        android:background="@drawable/textview_home"
        app:layout_goneMarginBottom="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:text="@string/beasts_at_home"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="366dp"
        android:layout_height="43dp"
        android:layout_marginTop="416dp"
        android:text="TextView"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:layout_editor_absoluteX="25dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/viewhome"
        android:layout_width="366dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/format"
        android:text="@string/view_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/viewbattle"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_marginTop="460dp"
        android:text="@string/view_battle_area"
        android:background="@drawable/format"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/viewtrain"
        android:layout_width="372dp"
        android:layout_height="49dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/format"
        android:text="@string/view_training_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bb_move_to_home"
        android:layout_width="167dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/move_to_home_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>