<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Home">

    <Button
        android:id="@+id/button9"
        android:layout_width="127dp"
        android:layout_height="55dp"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="12dp"
        android:text="@string/home_page"
        android:backgroundTint="#006600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="127dp"
        android:layout_height="55dp"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="12dp"
        android:text="@string/battle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="389dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:gravity="center"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/re_home"
        android:layout_width="401dp"
        android:layout_height="563dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="127dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/training"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>